--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-rename": "^1.2.2"
   },
   "dependencies": {
-    "webrtc-adapter": "^1.1.0"
+    "jquery": "^3.1.0",
+    "webrtc-adapter": "^1.4"
   }
 }
